// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`holocronModule executeLoadModuleData should call loadModuleData with correct args 1`] = `
[
  [
    {
      "fetchClient": [MockFunction],
      "module": {
        "displayName": "FakeComponent",
      },
      "ownProps": {},
      "store": {
        "dispatch": [MockFunction] {
          "calls": [
            [
              [Function],
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": Promise {},
            },
          ],
        },
        "getState": [MockFunction],
      },
    },
  ],
]
`;

exports[`holocronModule should gracefully handle module state missing from store 1`] = `
<DocumentFragment>
  <div>
    Mock Module 2
  </div>
</DocumentFragment>
`;

exports[`holocronModule should pass mergeProps to connect if it is specified 1`] = `
<DocumentFragment>
  <div>
    3 * 4 = 12
  </div>
</DocumentFragment>
`;

exports[`holocronModule should provide state configured by mapStateToProps when a reducer is NOT provided 1`] = `
<DocumentFragment>
  <div>
    mapStateToPropsProp
  </div>
</DocumentFragment>
`;

exports[`holocronModule should provide state configured by mapStateToProps when a reducer is provided 1`] = `
<DocumentFragment>
  <div>
    mapStateToPropsProp
  </div>
</DocumentFragment>
`;

exports[`holocronModule should provide the module state as a plain JS prop if a reducer is provided 1`] = `
<DocumentFragment>
  <div>
    value
  </div>
</DocumentFragment>
`;

exports[`holocronModule should warn if a reducer is set but no name 1`] = `
[
  [
    "The Holocron Config in 'HolocronModule(undefined)' requires a 'name' when passing a 'reducer'.
The 'reducer' will not be added to the Redux Store without a 'name'.",
  ],
]
`;

exports[`holocronModule should wrap module with ModuleContext 1`] = `
<DocumentFragment>
  <div>
    test-module
  </div>
</DocumentFragment>
`;

exports[`holocronModule should wrap module with no arguments 1`] = `
<DocumentFragment>
  <div>
    Mock Module
  </div>
</DocumentFragment>
`;
